--- a/web/index.html
+++ b/web/index.html
@@ -1,172 +1,183 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mod Listesi</title>
   <style>
     body {
-      font-family: 'Inter', Arial, sans-serif;
-      background: #181a1b;
-      color: #e6e6e6;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: #121212;
+      color: #f0f0f0;
       margin: 0;
-      padding: 0;
+      padding: 16px;
       min-height: 100vh;
     }
+
     .container {
-      max-width: 480px;
-      margin: 48px auto;
-      background: #202223;
-      border-radius: 18px;
-      box-shadow: 0 2px 16px 0 #0004;
-      padding: 32px 20px 24px 20px;
+      max-width: 640px;
+      margin: 0 auto;
+      padding: 20px 0;
     }
+
     h1 {
+      font-size: 1.7rem;
+      font-weight: 500;
+      margin-bottom: 24px;
+      color: #fff;
       text-align: center;
-      color: #6ec1e4;
-      font-size: 2.1em;
-      font-weight: 600;
-      margin-bottom: 28px;
-      letter-spacing: 0.01em;
     }
+
     input[type="text"] {
       width: 100%;
-      padding: 12px 14px;
-      border-radius: 8px;
+      padding: 10px;
       border: none;
-      background: #232526;
-      color: #e6e6e6;
-      font-size: 1.08em;
-      margin-bottom: 22px;
-      outline: none;
-      transition: background 0.2s;
+      border-radius: 4px;
+      background: #1e1e1e;
+      color: #f0f0f0;
+      font-size: 0.95rem;
+      margin-bottom: 20px;
+      box-sizing: border-box;
     }
+
     input[type="text"]:focus {
-      background: #26292b;
+      outline: 1px solid #555;
     }
+
     .virtual-list-viewport {
-      max-height: 420px;
+      max-height: 70vh;
       overflow-y: auto;
-      border-radius: 10px;
-      background: none;
     }
+
     .mod-list {
       list-style: none;
       padding: 0;
       margin: 0;
     }
+
     .mod-item {
-      background: #232526;
-      margin-bottom: 10px;
-      border-radius: 8px;
-      padding: 15px 16px 13px 16px;
+      background: #1e1e1e;
+      margin-bottom: 8px;
+      border-radius: 4px;
+      padding: 12px 16px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: none;
-      border: 1px solid #232526;
-      transition: border 0.18s, background 0.18s;
     }
-    .mod-item:hover {
-      border: 1px solid #6ec1e4;
-      background: #23282b;
-    }
+
     .mod-info {
       flex: 1;
       min-width: 0;
     }
+
     .mod-name {
-      font-size: 1.08em;
-      font-weight: 500;
-      color: #6ec1e4;
-      margin-bottom: 2px;
+      font-size: 1rem;
+      font-weight: 400;
+      color: #fff;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
+
     .mod-desc {
-      color: #b0b8c1;
-      font-size: 0.98em;
-      margin-top: 2px;
-      opacity: 0.82;
+      color: #aaa;
+      font-size: 0.85rem;
+      margin-top: 4px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
-    .mod-desc:empty { display: none; }
+
+    .mod-desc:empty {
+      display: none;
+    }
+
     .download-btn {
-      background: #232526;
-      color: #6ec1e4;
-      border: 1px solid #6ec1e4;
-      border-radius: 7px;
-      padding: 8px 18px;
-      font-size: 1em;
-      font-weight: 500;
+      background: transparent;
+      color: #fff;
+      border: 1px solid #444;
+      border-radius: 4px;
+      padding: 6px 12px;
+      font-size: 0.85rem;
       cursor: pointer;
-      transition: background 0.18s, color 0.18s, border 0.18s;
-      outline: none;
       text-decoration: none;
-      margin-left: 18px;
+      margin-left: 12px;
+      white-space: nowrap;
     }
+
     .download-btn:hover {
-      background: #6ec1e4;
-      color: #181a1b;
-      border: 1px solid #6ec1e4;
+      background: #333;
     }
+
     .loading {
       text-align: center;
-      color: #6ec1e4;
-      margin: 32px 0 0 0;
-      font-size: 1.08em;
-      letter-spacing: 0.01em;
+      margin: 20px 0;
+      color: #aaa;
     }
-    @media (max-width: 600px) {
-      .container { max-width: 98vw; padding: 16px 2vw 12px 2vw; }
-      .virtual-list-viewport { max-height: 60vh; }
+
+    @media (max-width: 700px) {
+      .container {
+        padding: 10px 0;
+      }
+
+      .virtual-list-viewport {
+        max-height: 75vh;
+      }
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <h1>Mod Listesi</h1>
     <input type="text" id="search" placeholder="Mod ara...">
-    <div class="virtual-list-viewport"><ul class="mod-list" id="modList"></ul></div>
+    <div class="virtual-list-viewport">
+      <ul class="mod-list" id="modList"></ul>
+    </div>
     <div id="loading" class="loading">Yükleniyor...</div>
   </div>
   <script>
     // Debounce fonksiyonu
     function debounce(fn, delay) {
       let timer;
-      return function(...args) {
+      return function (...args) {
         clearTimeout(timer);
         timer = setTimeout(() => fn.apply(this, args), delay);
       };
     }
+
     async function fetchMods() {
       const res = await fetch('/api/mods');
       return res.json();
     }
+
     function createDownloadUrl(name) {
       return `https://gs-85-14-206-57.server.4netplayers.com:20820/mods/${encodeURIComponent(name)}.zip`;
     }
+
     // Sanal listeleme için parametreler
-    const ITEM_HEIGHT = 68;
-    const VISIBLE_COUNT = 12;
+    const ITEM_HEIGHT = 60;
+    const VISIBLE_COUNT = 15;
     let allMods = [];
     let filteredMods = [];
+
     function renderMods(mods, scrollTop = 0) {
       const list = document.getElementById('modList');
       const viewport = document.querySelector('.virtual-list-viewport');
       const start = Math.floor(scrollTop / ITEM_HEIGHT);
       const end = Math.min(start + VISIBLE_COUNT, mods.length);
+
       list.innerHTML = '';
       if (mods.length === 0) {
-        list.innerHTML = '<li style="text-align:center;color:#b0b8c1">Sonuç bulunamadı.</li>';
+        list.innerHTML = '<li style="text-align:center;color:#aaa;padding:10px">Sonuç bulunamadı.</li>';
         return;
       }
+
       // Boş alanı doldurmak için padding
       list.style.paddingTop = (start * ITEM_HEIGHT) + 'px';
       list.style.paddingBottom = ((mods.length - end) * ITEM_HEIGHT) + 'px';
+
       for (let i = start; i < end; i++) {
         const mod = mods[i];
         const li = document.createElement('li');
@@ -181,19 +192,24 @@
         list.appendChild(li);
       }
     }
+
     // Arama kutusu için debounce ile performanslı filtreleme
     const searchInput = document.getElementById('search');
     const viewport = document.querySelector('.virtual-list-viewport');
+
     function doFilter() {
       const q = searchInput.value.toLowerCase();
       filteredMods = allMods.filter(mod => (mod.name || mod.id || '').toLowerCase().includes(q));
       renderMods(filteredMods, viewport.scrollTop);
     }
+
     searchInput.addEventListener('input', debounce(doFilter, 200));
+
     // Sanal listeleme için scroll event
     viewport.addEventListener('scroll', () => {
       renderMods(filteredMods, viewport.scrollTop);
     });
+
     // Yükleniyor animasyonu ve veri çekme
     document.getElementById('loading').style.display = 'block';
     fetchMods().then(mods => {
@@ -206,4 +222,5 @@
     });
   </script>
 </body>
+
 </html>
