--- a/web/index.html
+++ b/web/index.html
@@ -2,225 +2,319 @@
 <html lang="tr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mod Listesi</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #121212;
-      color: #f0f0f0;
-      margin: 0;
-      padding: 16px;
-      min-height: 100vh;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Farming Simulator 2025 - Mod Listesi</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #0a0a0a url('./assets/fs-25-background.png') center center no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            color: #f0f0f0;
+            margin: 0;
+            padding: 16px;
+            min-height: 100vh;
+            position: relative;
+        }
 
-    .container {
-      max-width: 640px;
-      margin: 0 auto;
-      padding: 20px 0;
-    }
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: -1;
+        }
 
-    h1 {
-      font-size: 1.7rem;
-      font-weight: 500;
-      margin-bottom: 24px;
-      color: #fff;
-      text-align: center;
-    }
+        .container {
+            max-width: 720px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: rgba(10, 10, 10, 0.85);
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(80, 160, 0, 0.2);
+        }
 
-    input[type="text"] {
-      width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
-      background: #1e1e1e;
-      color: #f0f0f0;
-      font-size: 0.95rem;
-      margin-bottom: 20px;
-      box-sizing: border-box;
-    }
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 24px;
+            flex-direction: column;
+            text-align: center;
+        }
 
-    input[type="text"]:focus {
-      outline: 1px solid #555;
-    }
+        .logo {
+            width: 80px;
+            height: 80px;
+            margin-bottom: 16px;
+        }
 
-    .virtual-list-viewport {
-      max-height: 70vh;
-      overflow-y: auto;
-    }
+        h1 {
+            font-size: 1.8rem;
+            font-weight: 600;
+            margin: 0;
+            color: #fff;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+            line-height: 1.3;
+        }
 
-    .mod-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
+        .subtitle {
+            font-size: 1.4rem;
+            color: #72b01d;
+            font-weight: 500;
+        }
 
-    .mod-item {
-      background: #1e1e1e;
-      margin-bottom: 8px;
-      border-radius: 4px;
-      padding: 12px 16px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+        input[type="text"] {
+            width: 100%;
+            padding: 12px;
+            border: none;
+            border-radius: 4px;
+            background: #1e1e1e;
+            color: #f0f0f0;
+            font-size: 1rem;
+            margin-bottom: 20px;
+            box-sizing: border-box;
+            border: 1px solid #333;
+        }
 
-    .mod-info {
-      flex: 1;
-      min-width: 0;
-    }
+        input[type="text"]:focus {
+            outline: none;
+            border-color: #72b01d;
+            box-shadow: 0 0 0 1px #72b01d;
+        }
 
-    .mod-name {
-      font-size: 1rem;
-      font-weight: 400;
-      color: #fff;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+        .virtual-list-viewport {
+            max-height: 60vh;
+            overflow-y: auto;
+            border-radius: 4px;
+            border: 1px solid #333;
+            background-color: rgba(20, 20, 20, 0.7);
+        }
 
-    .mod-desc {
-      color: #aaa;
-      font-size: 0.85rem;
-      margin-top: 4px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+        .mod-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-    .mod-desc:empty {
-      display: none;
-    }
+        .mod-item {
+            background: rgba(30, 30, 30, 0.7);
+            margin: 8px;
+            border-radius: 4px;
+            padding: 12px 16px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-left: 3px solid #72b01d;
+            transition: all 0.2s ease;
+        }
 
-    .download-btn {
-      background: transparent;
-      color: #fff;
-      border: 1px solid #444;
-      border-radius: 4px;
-      padding: 6px 12px;
-      font-size: 0.85rem;
-      cursor: pointer;
-      text-decoration: none;
-      margin-left: 12px;
-      white-space: nowrap;
-    }
+        .mod-item:hover {
+            background: rgba(40, 40, 40, 0.9);
+            transform: translateX(2px);
+        }
 
-    .download-btn:hover {
-      background: #333;
-    }
+        .mod-info {
+            flex: 1;
+            min-width: 0;
+        }
 
-    .loading {
-      text-align: center;
-      margin: 20px 0;
-      color: #aaa;
-    }
+        .mod-name {
+            font-size: 1.05rem;
+            font-weight: 500;
+            color: #fff;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
-    @media (max-width: 700px) {
-      .container {
-        padding: 10px 0;
-      }
+        .mod-desc {
+            color: #bbb;
+            font-size: 0.85rem;
+            margin-top: 4px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
-      .virtual-list-viewport {
-        max-height: 75vh;
-      }
-    }
-  </style>
+        .mod-desc:empty {
+            display: none;
+        }
+
+        .download-btn {
+            background: #72b01d;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            padding: 8px 14px;
+            font-size: 0.9rem;
+            cursor: pointer;
+            text-decoration: none;
+            margin-left: 12px;
+            white-space: nowrap;
+            transition: background 0.2s;
+            font-weight: 500;
+        }
+
+        .download-btn:hover {
+            background: #5a8c17;
+        }
+
+        .loading {
+            text-align: center;
+            margin: 20px 0;
+            color: #72b01d;
+            font-weight: 500;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.8rem;
+            color: #888;
+        }
+
+        /* Özel scrollbar */
+        .virtual-list-viewport::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .virtual-list-viewport::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, 0.2);
+        }
+
+        .virtual-list-viewport::-webkit-scrollbar-thumb {
+            background: #72b01d;
+            border-radius: 4px;
+        }
+
+        @media (max-width: 700px) {
+            .container {
+                padding: 15px;
+            }
+
+            .virtual-list-viewport {
+                max-height: 65vh;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            .subtitle {
+                font-size: 1.2rem;
+            }
+
+            .logo {
+                width: 60px;
+                height: 60px;
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1>Mod Listesi</h1>
-    <input type="text" id="search" placeholder="Mod ara...">
-    <div class="virtual-list-viewport">
-      <ul class="mod-list" id="modList"></ul>
+    <div class="container">
+        <div class="header">
+            <img src="./assets/letter-d.png" alt="FS25 Logo" class="logo">
+            <h1>Farming Simulator 2025<br><span class="subtitle">Mod Listesi</span></h1>
+        </div>
+        <input type="text" id="search" placeholder="Mod ara...">
+        <div class="virtual-list-viewport">
+            <ul class="mod-list" id="modList"></ul>
+        </div>
+        <div id="loading" class="loading">Yükleniyor...</div>
+        <div class="footer">Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu</div>
     </div>
-    <div id="loading" class="loading">Yükleniyor...</div>
-  </div>
-  <script>
-    // Debounce fonksiyonu
-    function debounce(fn, delay) {
-      let timer;
-      return function (...args) {
-        clearTimeout(timer);
-        timer = setTimeout(() => fn.apply(this, args), delay);
-      };
-    }
+    <script>
+        // Debounce fonksiyonu
+        function debounce(fn, delay) {
+            let timer;
+            return function (...args) {
+                clearTimeout(timer);
+                timer = setTimeout(() => fn.apply(this, args), delay);
+            };
+        }
 
-    async function fetchMods() {
-      const res = await fetch('/api/mods');
-      return res.json();
-    }
+        async function fetchMods() {
+            const res = await fetch('/api/mods');
+            return res.json();
+        }
 
-    function createDownloadUrl(name) {
-      return `https://gs-85-14-206-57.server.4netplayers.com:20820/mods/${encodeURIComponent(name)}.zip`;
-    }
+        function createDownloadUrl(name) {
+            return `https://gs-85-14-206-57.server.4netplayers.com:20820/mods/${encodeURIComponent(name)}.zip`;
+        }
 
-    // Sanal listeleme için parametreler
-    const ITEM_HEIGHT = 60;
-    const VISIBLE_COUNT = 15;
-    let allMods = [];
-    let filteredMods = [];
+        // Sanal listeleme için parametreler
+        const ITEM_HEIGHT = 64;
+        const VISIBLE_COUNT = 12;
+        let allMods = [];
+        let filteredMods = [];
 
-    function renderMods(mods, scrollTop = 0) {
-      const list = document.getElementById('modList');
-      const viewport = document.querySelector('.virtual-list-viewport');
-      const start = Math.floor(scrollTop / ITEM_HEIGHT);
-      const end = Math.min(start + VISIBLE_COUNT, mods.length);
+        function renderMods(mods, scrollTop = 0) {
+            const list = document.getElementById('modList');
+            const viewport = document.querySelector('.virtual-list-viewport');
+            const start = Math.floor(scrollTop / ITEM_HEIGHT);
+            const end = Math.min(start + VISIBLE_COUNT, mods.length);
 
-      list.innerHTML = '';
-      if (mods.length === 0) {
-        list.innerHTML = '<li style="text-align:center;color:#aaa;padding:10px">Sonuç bulunamadı.</li>';
-        return;
-      }
+            list.innerHTML = '';
+            if (mods.length === 0) {
+                list.innerHTML = '<li style="text-align:center;color:#aaa;padding:15px">Sonuç bulunamadı.</li>';
+                return;
+            }
 
-      // Boş alanı doldurmak için padding
-      list.style.paddingTop = (start * ITEM_HEIGHT) + 'px';
-      list.style.paddingBottom = ((mods.length - end) * ITEM_HEIGHT) + 'px';
+            // Boş alanı doldurmak için padding
+            list.style.paddingTop = (start * ITEM_HEIGHT) + 'px';
+            list.style.paddingBottom = ((mods.length - end) * ITEM_HEIGHT) + 'px';
 
-      for (let i = start; i < end; i++) {
-        const mod = mods[i];
-        const li = document.createElement('li');
-        li.className = 'mod-item';
-        li.innerHTML = `
+            for (let i = start; i < end; i++) {
+                const mod = mods[i];
+                const li = document.createElement('li');
+                li.className = 'mod-item';
+                li.innerHTML = `
           <div class="mod-info">
             <div class="mod-name">${mod.name || mod.id || 'İsimsiz Mod'}</div>
-            <div class="mod-desc">${mod.description ? mod.description : ''}</div>
+            <div class="mod-desc">${mod.description ? mod.description : 'Farming Simulator 2025 modu'}</div>
           </div>
           <a class="download-btn" href="${createDownloadUrl(mod.name || mod.id)}" target="_blank">İndir</a>
         `;
-        list.appendChild(li);
-      }
-    }
+                list.appendChild(li);
+            }
+        }
 
-    // Arama kutusu için debounce ile performanslı filtreleme
-    const searchInput = document.getElementById('search');
-    const viewport = document.querySelector('.virtual-list-viewport');
+        // Arama kutusu için debounce ile performanslı filtreleme
+        const searchInput = document.getElementById('search');
+        const viewport = document.querySelector('.virtual-list-viewport');
 
-    function doFilter() {
-      const q = searchInput.value.toLowerCase();
-      filteredMods = allMods.filter(mod => (mod.name || mod.id || '').toLowerCase().includes(q));
-      renderMods(filteredMods, viewport.scrollTop);
-    }
+        function doFilter() {
+            const q = searchInput.value.toLowerCase();
+            filteredMods = allMods.filter(mod => (mod.name || mod.id || '').toLowerCase().includes(q));
+            renderMods(filteredMods, viewport.scrollTop);
+        }
 
-    searchInput.addEventListener('input', debounce(doFilter, 200));
+        searchInput.addEventListener('input', debounce(doFilter, 200));
 
-    // Sanal listeleme için scroll event
-    viewport.addEventListener('scroll', () => {
-      renderMods(filteredMods, viewport.scrollTop);
-    });
+        // Sanal listeleme için scroll event
+        viewport.addEventListener('scroll', () => {
+            renderMods(filteredMods, viewport.scrollTop);
+        });
 
-    // Yükleniyor animasyonu ve veri çekme
-    document.getElementById('loading').style.display = 'block';
-    fetchMods().then(mods => {
-      allMods = mods;
-      filteredMods = mods;
-      document.getElementById('loading').style.display = 'none';
-      renderMods(mods);
-    }).catch(() => {
-      document.getElementById('loading').textContent = 'Modlar yüklenemedi.';
-    });
-  </script>
+        // Yükleniyor animasyonu ve veri çekme
+        document.getElementById('loading').style.display = 'block';
+        fetchMods().then(mods => {
+            allMods = mods;
+            filteredMods = mods;
+            document.getElementById('loading').style.display = 'none';
+            renderMods(mods);
+        }).catch(() => {
+            document.getElementById('loading').textContent = 'Modlar yüklenemedi.';
+        });
+    </script>
 </body>
 
 </html>
