--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
             max-width: 720px;
             margin: 0 auto;
             padding: 20px;
-            background-color: rgba(10, 10, 10, 0.85);
+            background-color: rgba(10, 10, 10, 0.342);
             border-radius: 8px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
             border: 1px solid rgba(80, 160, 0, 0.2);
@@ -223,13 +223,50 @@
         <div class="header">
             <img src="./assets/letter-d.png" alt="FS25 Logo" class="logo">
             <h1>Farming Simulator 2025<br><span class="subtitle">Mod Listesi</span></h1>
+            <!-- Sunucu tanıtımı ve Discord davet butonu -->
+            <div style="margin-top:10px;">
+                <span style="color:#bbb;font-size:1rem;">
+                    Dostlar Konağı FS25 sunucusuna hoş geldiniz! Katılmak ve destek almak için Discord sunucumuza bekleriz.
+                </span>
+                <br>
+                <a href="https://discord.gg/yQ7XNK6RyN" target="_blank" style="display:inline-block;margin-top:8px;padding:8px 18px;background:#5865F2;color:#fff;border-radius:4px;text-decoration:none;font-weight:500;">
+                    Discord'a Katılmak İçin Tıklayın
+                </a>
+            </div>
         </div>
-        <input type="text" id="search" placeholder="Mod ara...">
+        <div class="filter-bar" style="display:flex;gap:10px;margin-bottom:18px;align-items:center;flex-wrap:wrap;">
+            <input type="text" id="search" placeholder="Mod ara..." style="flex:2;min-width:140px;max-width:220px;">
+            <select id="authorFilter" class="filter-select" style="flex:1;min-width:110px;max-width:180px;background:#1e1e1e;color:#f0f0f0;border:1px solid #333;border-radius:4px;padding:8px;">
+                <option value="">Tüm Yazarlar</option>
+            </select>
+            <select id="sortSelect" class="filter-select" style="flex:1;min-width:110px;max-width:180px;background:#1e1e1e;color:#f0f0f0;border:1px solid #333;border-radius:4px;padding:8px;">
+                <option value="name-asc">İsme Göre (A-Z)</option>
+                <option value="name-desc">İsme Göre (Z-A)</option>
+                <option value="author-asc">Yazara Göre (A-Z)</option>
+                <option value="author-desc">Yazara Göre (Z-A)</option>
+            </select>
+            <a href="https://gs-85-14-206-57.server.4netplayers.com:20820/all_mods_download?onlyActive=true" target="_blank" class="download-btn" style="flex:none;min-width:140px;max-height:40px;display:flex;align-items:center;justify-content:center;gap:6px;font-size:0.97rem;white-space:nowrap;">Tüm Modları İndir</a>
+        </div>
         <div class="virtual-list-viewport">
             <ul class="mod-list" id="modList"></ul>
         </div>
         <div id="loading" class="loading">Yükleniyor...</div>
-        <div class="footer">Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu</div>
+        <!-- Mod listesi hakkında bilgi -->
+        <div id="modInfo" style="text-align:center;color:#aaa;font-size:0.95rem;margin:10px 0 0 0;"></div>
+        <!-- Kurallar/Bilgilendirme -->
+        <div style="margin:18px 0 0 0;padding:12px 16px;background:rgba(40,60,10,0.13);border-radius:6px;color:#cfc;">
+            <b>Kurallar & Bilgilendirme:</b>
+            <ul style="margin:8px 0 0 18px;padding:0;font-size:0.95rem;color:#cfc;">
+                <li>Sunucuya katılmadan önce Discord'daki kuralları okuyun.</li>
+                <li>Modları indirirken bağlantı sorunları yaşarsanız Discord'dan destek alın.</li>
+                <li>Modlar düzenli olarak güncellenir, eski sürümleri silmeniz önerilir.</li>
+            </ul>
+        </div>
+        <div class="footer">
+            Farming Simulator 2025 © | Dostlar Konağı mod koleksiyonu<br>
+            İletişim: <b>poncikpanda</b> (Discord)<br>
+            <span id="versionInfo"></span>
+        </div>
     </div>
     <script>
         // Debounce fonksiyonu
@@ -255,6 +292,7 @@
         const VISIBLE_COUNT = 12;
         let allMods = [];
         let filteredMods = [];
+        let allAuthors = [];
 
         function renderMods(mods, scrollTop = 0) {
             const list = document.getElementById('modList');
@@ -278,26 +316,66 @@
                 li.className = 'mod-item';
                 li.innerHTML = `
           <div class="mod-info">
-            <div class="mod-name">${mod.name || mod.id || 'İsimsiz Mod'}</div>
-            <div class="mod-desc">${mod.description ? mod.description : 'Farming Simulator 2025 modu'}</div>
+            <div class="mod-name">${mod.text}</div>
+            <div class="mod-id">${mod.name}</div>
+            <div class="mod-desc">${mod.author}</div>
           </div>
-          <a class="download-btn" href="${createDownloadUrl(mod.name || mod.id)}" target="_blank">İndir</a>
+          <a class="download-btn" href="${createDownloadUrl(mod.name)}" target="_blank">İndir</a>
         `;
                 list.appendChild(li);
             }
+        }
+
+        function updateAuthorFilter() {
+            const select = document.getElementById('authorFilter');
+            const authors = Array.from(new Set(allMods.map(m => m.author).filter(Boolean))).sort((a,b)=>a.localeCompare(b));
+            allAuthors = authors;
+            select.innerHTML = '<option value="">Tüm Yazarlar</option>' + authors.map(a => `<option value="${a}">${a}</option>`).join('');
         }
 
         // Arama kutusu için debounce ile performanslı filtreleme
         const searchInput = document.getElementById('search');
         const viewport = document.querySelector('.virtual-list-viewport');
 
-        function doFilter() {
+        function doFilterSort() {
             const q = searchInput.value.toLowerCase();
-            filteredMods = allMods.filter(mod => (mod.name || mod.id || '').toLowerCase().includes(q));
+            const author = document.getElementById('authorFilter').value;
+            const sort = document.getElementById('sortSelect').value;
+            filteredMods = allMods.filter(mod => {
+                const matchesText = (mod.name || mod.id || '').toLowerCase().includes(q) || (mod.text||'').toLowerCase().includes(q);
+                const matchesAuthor = !author || mod.author === author;
+                return matchesText && matchesAuthor;
+            });
+            // Sıralama
+            if (sort === 'name-asc') filteredMods.sort((a,b)=>a.text.localeCompare(b.text));
+            else if (sort === 'name-desc') filteredMods.sort((a,b)=>b.text.localeCompare(a.text));
+            else if (sort === 'author-asc') filteredMods.sort((a,b)=>(a.author||'').localeCompare(b.author||''));
+            else if (sort === 'author-desc') filteredMods.sort((a,b)=>(b.author||'').localeCompare(a.author||''));
             renderMods(filteredMods, viewport.scrollTop);
         }
 
-        searchInput.addEventListener('input', debounce(doFilter, 200));
+        // Mod sayısı ve güncelleme tarihi gösterimi
+        function updateModInfo() {
+            const infoDiv = document.getElementById('modInfo');
+            const date = new Date();
+            infoDiv.textContent = `Toplam mod: ${filteredMods.length} | Son güncelleme: ${date.toLocaleDateString()} ${date.toLocaleTimeString()}`;
+        }
+
+        // Footer'da sürüm bilgisi
+        document.getElementById('versionInfo').textContent = "Bot Sürümü: v1.0.0";
+
+        searchInput.addEventListener('input', debounce(() => {
+            doFilterSort();
+            updateModInfo();
+        }, 200));
+        document.getElementById('authorFilter').addEventListener('change', () => {
+            doFilterSort();
+            updateModInfo();
+        });
+        document.getElementById('sortSelect').addEventListener('change', () => {
+            doFilterSort();
+            updateModInfo();
+        });
 
         // Sanal listeleme için scroll event
         viewport.addEventListener('scroll', () => {
@@ -309,8 +387,10 @@
         fetchMods().then(mods => {
             allMods = mods;
             filteredMods = mods;
+            updateAuthorFilter();
             document.getElementById('loading').style.display = 'none';
             renderMods(mods);
+            updateModInfo();
         }).catch(() => {
             document.getElementById('loading').textContent = 'Modlar yüklenemedi.';
         });
